--- a/css/style.scss
+++ b/css/style.scss
@@ -20,7 +20,7 @@ body{
     position: relative;
 
     scroll-behavior: smooth;
-    background-color: #1a1a1a;
+    background-color: $white-light;
 }
 
 svg, img {
